# twacapic

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: codeql-analysis.yml
tests/: test_twacapic.py
tests/mock_files/: mock_credentials.yaml  protected_nonexistent_users.csv  users.csv  users2.csv
twacapic/: __init__.py  auth.py  collect.py  main.py  notifications.py  utils.py
twacapic/templates/: __init__.py  group_config.yaml  min_group_config.yaml
